@@ -7,6 +7,7 @@ Date: 00. 00. 0000
     -
   Bugfixes:
     - Fixed a migration crash (#433)
+    - Fixed putting offshore pumps into the cursor would crash (#438)
 
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.16
